--- a/project/templates/holywars/homepage.html
+++ b/project/templates/holywars/homepage.html
@@ -40,7 +40,7 @@ body:
         <h3 class="text" style="font-family: sans-serif;"> Thank you for interest but website has not yet launched. But If your name is Vasya you can login through button below. </h3>
         </div>
 
-        <a href="/accounts/login/" class="css_button_4"> Login </a>
+        <a href="/accounts/login/" class="login_button" style="width:200px;"> Login </a>
 
 
 <style>
@@ -69,31 +69,22 @@ body:
         text-align: center;
     }
 
-    .css_button_4{
-
-        width: 200px;
-        text-align: center;
-
-        margin: 0 auto;
-        display: block;
-        font-family: 'Montserrat',arial, helvetica, sans-serif;
-        padding: 15px;
-        color: #ffffff;
-        background-color: #1abc9c;
-        font-size: 18px;
-
-    }
-
-    .css_button_4:hover {
-        border: 0px solid transparent;
-        background-color: #03876D;
-    }
 
 </style>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63205607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
     </body>
 </html>
