--- a/project/templates/holywars/my_profile.html
+++ b/project/templates/holywars/my_profile.html
@@ -25,7 +25,7 @@
 
         <div class="header">
 
-            <a href="/" class="header_title"> DnBe </a>
+            <a href="/" class="header_title"> DnBE </a>
 
             <a href="/accounts/logout/" class="header_my_profile"> Logout </a>
 
@@ -125,6 +125,10 @@
             </a>
 
         </div>
+        
+        {% empty %}
+            <h3 style="text-align: center;"> You have not yet created threads </h3>
+
         {% endfor %}
 
         </div>
@@ -168,6 +172,9 @@
 
             {% endif %}
 
+        {% empty %}
+            <h3 style="text-align: center;"> You have not yet created comments </h3>
+
 
         {% endfor %}
 
@@ -191,6 +198,9 @@
                         <p class="thread_grid_footer" style="text-align:left;display:inline-block;"> {{holywar.holywar_likes}} likes </p>
 
                     </a>
+
+                {% empty %}
+                    <h3 style="text-align: center;"> You have not yet created battles </h3>
 
                 {% endfor %}
 
@@ -254,15 +264,16 @@
 
     </script>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    <script type="text/javascript">
+  ga('create', 'UA-63205607-1', 'auto');
+  ga('send', 'pageview');
 
-        // $('.header_menu').
-              
-
-
-    </script>
-
+</script>
 
     </body>
 </html>
