--- a/project/static/style.css
+++ b/project/static/style.css
@@ -14,7 +14,6 @@ a{
 }
 
 .header{
-	height: 50px;
 	background-color: white;
 	font-size: 20px;
     border-bottom: 2px solid #9a9a9a;
@@ -584,5 +583,138 @@ a{
     #create_holywar{
     	margin-right: 0;
     }
+
+}
+
+
+
+
+.login{
+	margin: 100px auto;
+    text-align: center;
+}
+
+.login_button{
+
+    width: 100%;
+    text-align: center;
+
+    margin: 0 auto;
+    display: block;
+    font-family: 'Montserrat',arial, helvetica, sans-serif;
+    padding: 15px;
+    color: #ffffff;
+    background-color: #1abc9c;
+    font-size: 18px;
+    border: 0;
+}
+
+.login_button:hover {
+    border: 0px solid transparent;
+    background-color: #03876D;
+    cursor: pointer;
+}
+
+	
+.login_center {
+    width: 260px;
+    margin-top:30px;
+    margin: 0 auto;
+}
+
+
+.login_center .login_center_submit_helper {
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+/*
+.login_center .form_row:first-child {
+  border-top: 0;
+}
+*/
+
+
+.signup input{
+    padding: 11px 10px 11px 13px;
+    margin: 0;
+    border: 0;
+    font: 16px/1.4 "Helvetica Neue","HelveticaNeue",Helvetica,Arial,sans-serif;
+    box-sizing: border-box;
+
+
+    border-top: 1px solid #e3e3e3;
+
+    width: 100%;
+}
+
+.login_page{
+    padding: 12px 30px;
+    color: #f34846;
+    background-color: white;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.homepage_descr{
+    height: 100px;
+    margin-left: 50px;
+    display: inline-block;
+    margin-top: 50px;
+    color: white;
+    font-style: sans-serif;
+    max-width: 260px;
+
+}
+
+
+
+.login_errors{
+	padding: 10px;
+    border-radius: 5px;
+    background: #000;
+    background: rgba(0,0,0,0.33);
+    color: white;
+}
+
+@media all and (max-width: 910px){
+	
+	.homepage_descr {
+        height: 100px;
+        padding: 20px;
+        margin: 0 auto;
+        margin-top: 100px;
+        display: block;
+    }
+
+    .login_center_signup{
+    	margin: 0 auto;
+        text-align: center;
+        margin-top: 100px;
+        float: center;
+    }
+
+}
+
+.header_ph{
+	font-size: 17px;
+	height: 50px;
+	background-color: #da552f;
+	text-align: center;
+	color: white;
+	line-height: 50px;
+	display: block;
+}
+
+.header_ph:hover{
+
+	color: blue;
 
 }
