--- a/project/templates/account/login.html
+++ b/project/templates/account/login.html
@@ -82,7 +82,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 
     <div class="login_center">
 
-        <form class="login" method="POST" action="{% url 'account_login' %}">
+        <form class="login signup" method="POST" action="{% url 'account_login' %}">
 		{% csrf_token %}
 
 		    <input autofocus="autofocus" id="id_login" name="login" class="login_field" placeholder="E-mail address" type="email" />
@@ -90,13 +90,13 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
             <input id="id_password" name="password" placeholder="Password" type="password" class="login_field"/>
 
             <label for="id_remember" style="color:white;font-family: sans-serif;  font-size: 18px;margin-right:10px;">Remember Me</label> 
-            <input id="id_remember" name="remember" type="checkbox" style="margin: 30px 0px;" />
+            <input id="id_remember" name="remember" type="checkbox" style="margin: 30px 0px;width:13px;" />
 
 		    {% if redirect_field_value %}
 			    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 		    {% endif %}
 
-            <button class="css_button_4" type="submit"> {% trans "Sign In" %} </button>
+            <button class="login_button" type="submit"> {% trans "Sign In" %} </button>
 
 
             <!--
@@ -113,92 +113,18 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 </div>
 
 
-
-
-		
-
 </div>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<style type="text/css">
+  ga('create', 'UA-63205607-1', 'auto');
+  ga('send', 'pageview');
 
-
-
-.login{
-	margin: 100px auto;
-  text-align: center;
-}
-
-.css_button_4{
-
-        width: 200px;
-        text-align: center;
-
-        margin: 0 auto;
-        display: block;
-        font-family: 'Montserrat',arial, helvetica, sans-serif;
-        padding: 15px;
-        color: #ffffff;
-        background-color: #1abc9c;
-        font-size: 18px;
-        border: 0;
-
-    }
-
-    .css_button_4:hover {
-        border: 0px solid transparent;
-        background-color: #03876D;
-        cursor: pointer;
-    }
-
-
-
-	
-.login_center {
-  width: 260px;
-   margin-top:30px;
-
-   margin: 0 auto;
-
-
-}
-
-
- .login_center .login_center_submit_helper {
-  
-  height: 0;
-  width: 0;
-  overflow: hidden;
-  opacity: 0;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-/*
-.login_center .form_row:first-child {
-  border-top: 0;
-}
-*/
-
-
- .login_field{
-  padding: 11px 10px 11px 13px;
-  margin: 0;
-  border: 0;
-  font: 16px/1.4 "Helvetica Neue","HelveticaNeue",Helvetica,Arial,sans-serif;
-  box-sizing: border-box;
-
-
-  border-top: 1px solid #e3e3e3;
-
-  width: 100%;
-
-}
-
-
-</style>
+</script>
 
 </body>
 </html>
