--- a/project/templates/account/signup.html
+++ b/project/templates/account/signup.html
@@ -1,25 +1,118 @@
-{% extends "account/base.html" %}
-
 {% load url from future %}
 {% load i18n %}
+<!DOCTYPE html>
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+    <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+   
+    {% load staticfiles %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+    <!-- 
+    <link rel="shortcut icon" href="{% static 'img/logo.ico' %}"> 
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    -->
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
-
-{% endblock %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %} " />
 
 
+    <!--[if IE]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    </head>
+
+<body style="background-color: #f34846;">
+
+<!--
+    <a href="#" class="header_ph">
+        DnBE is on <div style="text-decoration:underline;display:inline-block;"> Product Hunt </div>
+    </a>
+-->
+
+    <a href="{{ login_url }}" class="login_page">
+        Login
+    </a>
+
+    <div class="div-text">
+
+        <h3 class="text" style="font-family: sans-serif;"> DnBE it is a website that helping people reduce a hatred in internet. It is an area for different discussions. </h3>
+        
+    </div>
+
+
+    <div class="login_center login_center_signup">
+
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+
+        {% for field in form %}
+            {{ field }}
+        {% endfor %}
+
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+
+        {% if form.email.errors %}
+           <p class="login_errors"> Enter a valid email address. </p>
+        {% elif form.password1.errors %}
+            <p class="login_errors"> Password must be a minimum of 6 characters. </p>
+        {% elif form.password2.errors %}
+            <p class="login_errors"> Your passwords do not match </p>
+        {% endif %}
+
+        <button class="login_button" style="margin-top:20px;" type="submit">{% trans "Sign Up" %} </button>
+    
+    </form>
+    </div>
+
+    <style type="text/css">
+
+    .div-text{
+        text-align: center;
+        font-size: 18px;
+        max-width: 400px;
+
+        line-height: 26px;
+        margin: auto auto;
+        color: white;
+        letter-spacing: 0.1rem;
+        margin-bottom: 100px;
+    }
+
+    .text{
+        color: white;
+    }
+
+    .divs{
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    </style>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+    <script type="text/javascript">
+
+        $('#id_password2').attr('placeholder', 'Password again');
+        $('.login_page').css('margin-left', '98%').css('margin-left', '-=100px');
+
+
+    </script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63205607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</body>
+</html>
