--- a/project/templates/holywars/holywar.html
+++ b/project/templates/holywars/holywar.html
@@ -25,7 +25,7 @@
 
         <div class="header">
 
-            <a href="/" class="header_title"> DnBe </a>
+            <a href="/" class="header_title"> DnBE </a>
 
             <a href="/accounts/logout/" class="header_my_profile"> Logout </a>
 
@@ -138,7 +138,23 @@
 
                 </a>
 
+            {% empty %}
+                <h3 style="text-align: center;"> Threads is not yet created. </h3>
+
+
             {% endfor %}
+
+            <div style="margin: 50px auto;width: 100%;max-width: 300px;padding-bottom: 20px;">
+
+                {% if threads.has_previous %}
+                    <a href="?page={{ threads.previous_page_number }}" id="hw_load"> Previous Threads </a>
+                {% endif %}
+                
+                {% if threads.has_next %}
+                    <a href="?page={{ threads.next_page_number }}" style="float:right;" id="hw_load"> Next Threads </a>
+                {% endif %}
+
+            </div>
 
         </div>
 
@@ -193,6 +209,17 @@
 
 
 });
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63205607-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 
     </script>
